IC-Test/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ChemCareEPAWasteCode1__c</fullName>
        <description>5/5/2010 - KM - DELETE this as soon as someone knows how to recompile the Sample Request proxy with modified WSDL.  In meantime, s/b visible only to the SFDC Proxy&apos;s profile.</description>
        <label>XX ChemCare EPA Waste Code 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChemCareEPAWasteCode2__c</fullName>
        <description>5/5/2010 - KM - DELETE this as soon as someone knows how to recompile the Sample Request proxy with modified WSDL.  In meantime, s/b visible only to the SFDC Proxy&apos;s profile.</description>
        <label>XX ChemCare EPA Waste Code 2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChemCareEPAWasteCode3__c</fullName>
        <description>5/5/2010 - KM - DELETE this as soon as someone knows how to recompile the Sample Request proxy with modified WSDL.  In meantime, s/b visible only to the SFDC Proxy&apos;s profile.</description>
        <label>XX ChemCare EPA Waste Code 3</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChemCareQualified__c</fullName>
        <description>Date that an Account was qualified to solicit ChemCare.</description>
        <inlineHelpText>Date that an Account was qualified to solicit ChemCare.</inlineHelpText>
        <label>ChemCare Qualified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChemCareWasteVolumnUOM__c</fullName>
        <description>5/5/2010 - KM - DELETE this as soon as someone knows how to recompile the Sample Request proxy with modified WSDL.  In meantime, s/b visible only to the SFDC Proxy&apos;s profile.</description>
        <label>XX ChemCare Waste Volumn UOM</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChemCareWasteWeightUOM__c</fullName>
        <description>5/5/2010 - KM - DELETE this as soon as someone knows how to recompile the Sample Request proxy with modified WSDL.  In meantime, s/b visible only to the SFDC Proxy&apos;s profile.</description>
        <label>XX ChemCare Waste Weight UOM</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChemCare_Challenger_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC Challenger Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChemCare_Qualified__c</fullName>
        <label>XX ChemCare Qualified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChemcarePotential__c</fullName>
        <label>ChemCare Potential $</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChemcareTotalWasteSpend__c</fullName>
        <label>ChemCare Total Waste Spend</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ConsolidatedInvoiceCode__c</fullName>
        <label>Consolidated Invoice Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactCenterComments__c</fullName>
        <description>Account Allocation - Contact Center Comments</description>
        <label>Contact Center Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CorporationCode__c</fullName>
        <label>Corporation Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountyCode__c</fullName>
        <label>County Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountyName__c</fullName>
        <label>County Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditContactName__c</fullName>
        <label>Credit Contact Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditContactPhoneNumber__c</fullName>
        <label>Credit Contact Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditLimitType__c</fullName>
        <description>Indicates if the credit limit is for the National Account, or for this account as a &quot;StandAlone&quot;. Possible values are &quot;NatAcct&quot; and &quot;StandAlone&quot;, exactly as displayed in DCS.</description>
        <label>Credit Limit Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditLimit__c</fullName>
        <description>10/19/2005 - Eli - changed length to 13 to match source data from DCS.
4/6/05 - Eli - changed to type &quot;Number&quot; to accomodate comparison with DCS data.</description>
        <label>Credit Limit</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CreditRepCode__c</fullName>
        <label>Credit Rep Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditRep__c</fullName>
        <label>Credit Rep</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerAnnualRevenue__c</fullName>
        <label>Customer Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomerClassCode__c</fullName>
        <label>Customer Class Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerClassName__c</fullName>
        <label>Customer Class Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerNumber__c</fullName>
        <label>Customer Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerShipTo__c</fullName>
        <description>9 digit external ID corresponding to unique id from DCS: 6 digits for bill-to, plus 3 digits for ship-to. Populated via integration - cannot be a formula field because formulas cannot be external Ids.</description>
        <externalId>true</externalId>
        <inlineHelpText>9 digit ID corresponding to unique id from DCS: 6 digits for bill-to, plus 3 digits for ship-to.  Populated via integration only, non-editable.</inlineHelpText>
        <label>Customer Ship To</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CustomerStatusCode__c</fullName>
        <label>Customer Status Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerStatus__c</fullName>
        <description>10/19/2005 - Eli - changed length to 10 to match source data from DCS.</description>
        <label>Customer Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerTypeCode__c</fullName>
        <label>Customer Type Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCSOwnerCode__c</fullName>
        <label>DCS Owner Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;
&amp;IF( Len( ShippingStreet ) = 0,&quot;Shipping Street, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF(Len(BillingState) = 0, &quot;Billing State, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( Len(Website) = 0, &quot;Website&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( ShippingStreet ) = 0, 0,20) + 
IF( LEN( BillingState ) = 0, 0,20) + 
IF( LEN(BillingCity) = 0, 0,20) + 
IF(LEN(Phone) = 0, 0,20) + 
IF( LEN( Website ) = 0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateAccountEstablished__c</fullName>
        <label>Date Account Established</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeliveryContactName__c</fullName>
        <label>Delivery Contact Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryContactPhone__c</fullName>
        <description>10/19/2005 - Eli - changed length to 12 to match source data from DCS.</description>
        <label>Delivery Contact Phone Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepartmentCode__c</fullName>
        <label>Department Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepartmentName__c</fullName>
        <label>Department Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistrictCode__c</fullName>
        <label>District Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistrictMgrID__c</fullName>
        <description>Optional District Manager level.</description>
        <label>District Mgr ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistrictMgrName__c</fullName>
        <label>District Mgr Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistrictName__c</fullName>
        <label>District Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DunsNumber__c</fullName>
        <label>Duns #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F2STemp_Lost_Checkbox__c</fullName>
        <formula>RecordType.Name  = &quot;Ship To&quot;
  &amp;&amp; AcornRolling12MoSalesPY__c  &gt; 0 
  &amp;&amp; AcornRolling12MoSales__c  = 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>F2STemp Lost Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F2STemp_SoW_Checkbox__c</fullName>
        <formula>RecordType.Name  = &quot;Ship To&quot; 
&amp;&amp;  NOT( 
   (AcornRolling12MoSalesPY__c   &gt; 0 
          &amp;&amp; AcornRolling12MoSales__c = 0) 
  || (AcornRolling12MoSales__c  &gt;  0
          &amp;&amp; AcornRolling12MoSales__c 
                &lt;  AcornRolling12MoSalesPY__c  / 2)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>F2STemp SoW Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F2STemp_Wounded_Checkbox__c</fullName>
        <formula>RecordType.Name = &quot;Ship To&quot;
  &amp;&amp; AcornRolling12MoSales__c  &gt;  0
  &amp;&amp;  AcornRolling12MoSales__c 
       &lt;  AcornRolling12MoSalesPY__c  / 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>F2STemp Wounded Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F2S_Start_Date__c</fullName>
        <description>Freedom to Sell.  Populated by Data Loader.</description>
        <label>F2S Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FederalEPANumber__c</fullName>
        <label>Federal EPA Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldManagerComments__c</fullName>
        <description>Should be editable by manager profiles only</description>
        <label>Manager Review Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FirstInvoiceDate__c</fullName>
        <label>First Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GFSI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Global Food Safety Initiative Certification</description>
        <inlineHelpText>Customer Requires Global Food Safety Initiative Certification</inlineHelpText>
        <label>Global Food Safety Initiative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GeneralMgrID__c</fullName>
        <description>10/19/2005 - Eli - changed length to 4 to match source data from DCS.</description>
        <label>General Mgr ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeneralMgrName__c</fullName>
        <label>General Mgr Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupAccountNumber__c</fullName>
        <description>10/19/2005 - Eli - changed length to 4 to match source data from DCS.</description>
        <label>CA/MPA Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupAccountType__c</fullName>
        <label>CA/MPA Type</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-plant Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-plant Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-plant Western</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ICCurrentYrForecastSales__c</fullName>
        <description>Industrial Chemical Current Year Forecasted Sales</description>
        <label>Forecast Sales</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ICForecastGMPercent__c</fullName>
        <description>Industrial Chemical Current Year Forecast Gross Margin Percentage
2005-08-04 - Eli - change length from 2 to 3 because DCS data contains percentages &gt; 99.9%
2006-05-24 - Eli - change to 3, 0 at business&apos; request per Cindy&apos;s instructions.</description>
        <label>Forecast GM%</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ICForecastGrossMargin__c</fullName>
        <description>Industrial Chemical Current Year Forecasted Gross Margin Dollars</description>
        <label>Forecast GM$</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ICPrevYrGMPercent__c</fullName>
        <description>Industrial Chemical Previous Year Gross Margin Percentage
10/19/2005 - Eli - changed length to 11,2 to match source data from DCS.
2005-08-04 - Eli - change length from 2 to 3 because DCS data contains percentages &gt; 99.9%</description>
        <label>XX Prior YTD GM%</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ICPrevYrGrossMargin__c</fullName>
        <label>XX Prior YTD $GM</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ICPrevYrSales__c</fullName>
        <label>XX Prior YTD Sales</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ICYTDGMPercent__c</fullName>
        <description>Industrial Chemical Year to Date Gross Margin Percentage
10/19/2005 - Eli - changed length to 11,2 to match source data from DCS.
2005-08-04 - Eli - change length from 2 to 3 because DCS data contains percentages &gt; 99.9%</description>
        <label>XX YTD GM%</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ICYTDGrossMargin__c</fullName>
        <inlineHelpText>Sales and GM information is sourced from Acorn.</inlineHelpText>
        <label>XX YTD $GM</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ICYTDSales__c</fullName>
        <label>XX YTD Sales</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IC_Challenger_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IC Challenger Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InSituCah__Ultimate_Parent_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ultimate Parent Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InSituCah__Ultimate_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ultimate Parent</label>
        <referenceTo>InSituCah__Ultimate_Parent__c</referenceTo>
        <relationshipLabel>Ultimate Parent</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IntegratedBillingCtryCd__c</fullName>
        <description>Code as determined in UVX integration</description>
        <label>Integrated Billing Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegratedBillingCtry__c</fullName>
        <description>Billing Country from external system (UVX, Outlook etc).  Stored separately because the ship-to update view will compare UVX extract country against this field and not against the standard Billing Country field which may be different due to a trigger that repopulates it.</description>
        <label>Integrated Billing Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegratedBillingStateCd__c</fullName>
        <description>From UVX integration</description>
        <label>Integrated Billing State Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegratedBillingState__c</fullName>
        <description>State Code from external system (UVX, Outlook etc).  Stored separately because the ship-to update view will compare UVX extract state against this state and not the standard Billing State field which may be different due to a trigger that repopulates it.</description>
        <label>Integrated Billing State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegratedShippingCtryCd__c</fullName>
        <label>Integrated Shipping Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegratedShippingCtry__c</fullName>
        <description>Country from external system (UVX, Outlook etc).</description>
        <label>Integrated Shipping Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegratedShippingStateCd__c</fullName>
        <label>Integrated Shipping State Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegratedShippingState__c</fullName>
        <description>State Code from external system (UVX, Outlook etc).  Stored separately because the ship-to update view will compare UVX extract state against this state and not the standard Shipping State field which may be different due to a trigger that repopulates it.</description>
        <label>Integrated Shipping State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyCompetitors__c</fullName>
        <label>Key Competitors</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyCustomers__c</fullName>
        <label>Key Customers</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastInvoiceDate__c</fullName>
        <label>Last Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <description>Last Activity Date used in Workflow Rule - Time Dependant Trigger.  Field created because Last Activity is not a valid field to choose for Time Dependant workflow.</description>
        <formula>LastActivityDate</formula>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude (OLD)</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude (OLD)</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUNIText__c</fullName>
        <description>Account belongs to the Muni Team</description>
        <formula>IF(Muni_Team_Account__c = TRUE,&quot;MUNI Team Acct&quot;, RecordType.DeveloperName )</formula>
        <label>MUNIText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagerCPPReview__c</fullName>
        <description>2006/01/05:  Added by Eli Edwards for Brian Feldtman.

Intended to store a record of a manager having reviewed the CPP records for the account.</description>
        <label>Manager CPP Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager_ChemCare_Approval__c</fullName>
        <description>Date that the Sales Manager Approved this customer for ChemCare sales.</description>
        <inlineHelpText>Date that the Sales Manager Approved this customer for ChemCare sales.</inlineHelpText>
        <label>Manager ChemCare Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MarketingSegment__c</fullName>
        <description>What type of customer is this for Univar?  Used to weed out Competitors when sending out emails to Contacts. 
Changes 2013-07-19, Enh30423 : Label changed to Tracking ID per Sales Ops request, and Prospects will only have one picklist value, 1=SPP Project.
Changes 2013-09-28 - Now it&apos;s F2S Id</description>
        <inlineHelpText>Prospect = Prospect
SOW = Share of Wallet based on Sales &gt;=50% in prior 12 mo vs. prior 13-24 mo.
Wounded = Sales &lt; 50% in prior 12 mo vs. prior 13-24 mo.
Lost = No sales in prior 12 mo vs. sales in prior 13-24 mo.</inlineHelpText>
        <label>F2S ID</label>
        <picklist>
            <picklistValues>
                <fullName>1=Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Municipality/Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=Producer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4=Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5=Univar Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6=Consultant/Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7=Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8=Unqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wounded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Muni_Team_Account__c</fullName>
        <description>If the Sales Rep Name contains MUNI, the box will be checked and unchecked if not.</description>
        <formula>IF(CONTAINS( SalesRepName__c , &quot;MUNI&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the Sales Rep Name contains MUNI, the box will be checked and unchecked if not.</inlineHelpText>
        <label>Muni Team Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NationalAccountCreditLimit__c</fullName>
        <description>5/5/2010 - KM - DELETE this as soon as someone knows how to recompile the Sample Request proxy with modified WSDL.  In meantime, s/b visible only to the SFDC Proxy&apos;s profile.</description>
        <label>XX Nat&apos;l Account Credit Limit</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NoTurnover__c</fullName>
        <description>Account Allocation - No Turnover Date
Editable by SMs and GMs
Readable by Contact Center Mgrs, global exec types</description>
        <label>No Turnover</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NumberofCPPs__c</fullName>
        <label>Number of CPPs</label>
        <summaryForeignKey>CPP__c.AccountId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofChemCare__c</fullName>
        <label>Number of ChemCare CPPs</label>
        <summaryForeignKey>ChemCare__c.AccountId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofContacts__c</fullName>
        <description>Populated by a DemandTools process, then used in monthly account deletion process.  NOT designed to reflect up-to-date figures, except right after the DemandTools job runs.</description>
        <label>Number of Contacts</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofOpportunities__c</fullName>
        <label>Number of Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofSampleRequests__c</fullName>
        <label>Number of Sample Requests</label>
        <summaryForeignKey>SampleRequest__c.AccountId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OtherShippingCompany__c</fullName>
        <label>Other Shipping Company</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerLink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account Owner. Populated via Apex, and then available to use in cross-object formulas to get at Account Owner data.</description>
        <label>Owner Link</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentDunsNumber__c</fullName>
        <label>Parent Duns #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentTermsCode__c</fullName>
        <label>Payment Terms Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentTerms__c</fullName>
        <description>10/19/2005 - Eli - changed length to 25 to match source data from DCS.</description>
        <label>Payment Terms</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PerformanceImprovement__c</fullName>
        <description>NOTE!!!!!    You MUST add the new picklist value to the Ship To Record Type as well as here in order for it to show up as an option.  Click on App Setup/Customize/Account/Record Types/Ship To, then find the PI field and click Edit to add the new picklist values to the right hand side.

You must also change both Workflow rules to include the new value as they key off of the individual values in the Rule Criteria.</description>
        <inlineHelpText>Contact your Regional Director of Marketing and Sales (RDMS) to add new initiatives.</inlineHelpText>
        <label>Performance Improvement</label>
        <picklist>
            <picklistValues>
                <fullName>Account Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC ECM Kickoff</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Port__c</fullName>
        <description>Port or Ports for customer.</description>
        <inlineHelpText>Port or Ports for customer.</inlineHelpText>
        <label>Port</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Present_Supplier__c</fullName>
        <description>Text field for present suppliers for customer.</description>
        <label>Present Suppliers</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PrimaryDeliveryMethodCode__c</fullName>
        <label>Primary Delivery Method Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryDeliveryMethod__c</fullName>
        <label>Primary Delivery Method</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryWarehouseCode__c</fullName>
        <label>Primary Warehouse Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryWarehouseName__c</fullName>
        <description>10/19/2005 - Eli - changed length to 25 to match source data from DCS.</description>
        <label>Primary Warehouse Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Families__c</fullName>
        <description>List of Product Families.</description>
        <inlineHelpText>List of Product Families.</inlineHelpText>
        <label>Product Families</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Products_Tariff_Codes__c</fullName>
        <description>List of Product and Tariff Codes.</description>
        <inlineHelpText>List of Product and Tariff Codes.</inlineHelpText>
        <label>Products/Tariff Codes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProfitabilitySegment__c</fullName>
        <description>Profitability segmentation assigning the account to a CSR, ISR or OSR.</description>
        <inlineHelpText>0=CSR (Customer Service Rep)
1=ISR (Inside Sales Rep)
2=OSR (Outside Sales Rep)</inlineHelpText>
        <label>Profitability Segment</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prospect_Status__c</fullName>
        <description>For the F2S Project</description>
        <label>Prospect Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ignored</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RegionCode__c</fullName>
        <label>Region Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionName__c</fullName>
        <label>Region Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionalMgrID__c</fullName>
        <description>10/19/2005 - Eli - changed length to 4 to match source data from DCS.</description>
        <label>Regional Mgr ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionalMgrName__c</fullName>
        <label>Regional Mgr Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <description>Should be editable by manager profiles only</description>
        <label>Account Reviewed by Field Manager</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rolling12MonthGMDollars__c</fullName>
        <description>10/19/2005 - Eli - changed length to 11,2 to match source data from DCS.</description>
        <label>XX Rolling 12 Month $GM</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rolling12MonthSales__c</fullName>
        <description>10/19/2005 - Eli - changed length to 11,2 to match source data from DCS.</description>
        <inlineHelpText>Sales and GM information is sourced from Acorn.</inlineHelpText>
        <label>XX Rolling 12 Month Sales</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>